# myDevOpsLearning

./: .gitignore
BuildandPackageManagerTools/myPackage/: README.md
BuildandPackageManagerTools/myPackage/mySubPackage/: subdemo.py
BuildandPackageManagerTools/myPip/: .gitignore
BuildandPackageManagerTools/myPoetry/: .gitignore  pyproject.toml
BuildandPackageManagerTools/myPoetry2/: pyproject.toml
BuildandPackageManagerTools/mySetUpTools/: setup.py  setupdemo.py
myPackage/: demo.py  test.py
myPip/: .gitignore
mySetUpTools/: README.md
mySetUpTools/setupdemo_calculator.egg-info/: PKG-INFO  SOURCES.txt
