[tool.poetry]
name = "mypoetry"
version = "0.1.0"
description = ""
authors = ["Elsa Deks"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
names-generator = "^0.1.0"

[tool.poetry.group.dev.dependencies]
DateGenerator = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
