[tool.poetry]
name = "mypoetry2"
version = "0.1.0"
description = ""
authors = ["Elsa Deks <elsadeks@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
names-generator = "^0.1.0"
python-date-interval-generator = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
